Update new index and ad codes

--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -33,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Doom Emacs 단축키</h1>
@@ -49,7 +50,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="#org0a1cbd4">프로젝트(Project)</a></li>
 <li><a href="#org272b037">창(Window)</a></li>
 <li><a href="#org6d81c4b">폴딩(Folding)</a></li>
-<li><a href="#org5363dc4">쉘(Shell) 혹은 터미널(Terminal)</a></li>
+<li><a href="#orgc71e820">셸(Shell) 혹은 터미널(Terminal)</a></li>
 <li><a href="#org77f39c1">템플릿(Snippets)</a></li>
 <li><a href="#org645e399">검색(Search)</a></li>
 </ul>
@@ -163,9 +164,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </div>
-<div id="outline-container-org5363dc4" class="outline-3">
-<h3 id="org5363dc4">쉘(Shell) 혹은 터미널(Terminal)</h3>
-<div class="outline-text-3" id="text-org5363dc4">
+<div id="outline-container-orgc71e820" class="outline-3">
+<h3 id="orgc71e820">셸(Shell) 혹은 터미널(Terminal)</h3>
+<div class="outline-text-3" id="text-orgc71e820">
 <ul class="org-ul">
 <li><code>SPC o t</code> 터미널 열기</li>
 </ul>
@@ -321,6 +322,6 @@ gtag('config', 'UA-44534026-1');
 
 
 </div>
-</div><div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
