--- a/github-actions.html
+++ b/github-actions.html
@@ -33,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Github Actions</h1>
@@ -122,7 +123,7 @@ gtag('config', 'UA-44534026-1');
 </p>
 
 <p>
-물론 이 외에 커스텀으로 가장 많이 사용하게 될 쉘 커맨드의 경우 아래와 같은 식으로 사용됩니다.
+물론 이 외에 커스텀으로 가장 많이 사용하게 될 셸 커맨드의 경우 아래와 같은 식으로 사용됩니다.
 </p>
 <div class="org-src-container">
 <pre class="src src-yaml">- <span style="color: #dcaeea;">name</span>: run some shell commands
@@ -159,6 +160,6 @@ gtag('config', 'UA-44534026-1');
 
 
 </div>
-</div><div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
