--- a/homebrew.html
+++ b/homebrew.html
@@ -33,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Homebrew</h1>
@@ -51,7 +52,7 @@ Homebrew는 macOS용 패키지 관리자입니다. 기본 유틸리티가 아닌
 <h2 id="org496dc1c">설치</h2>
 <div class="outline-text-2" id="text-org496dc1c">
 <p>
-쉘에서 아래 커맨드를 복사해서 붙여 넣습니다.
+셸에서 아래 커맨드를 복사해서 붙여 넣습니다.
 </p>
 <div class="org-src-container">
 <pre class="src src-bash">/usr/bin/ruby -e <span style="color: #98be65;">\</span>
@@ -249,7 +250,7 @@ If you need to have this software first in your PATH instead consider running:
 </p>
 <blockquote>
 <p>
-메시지의 내용은 어떤 쉘(shell)을 쓰는지 등에 딸라 달라질 수 있습니다. 어쨌든
+메시지의 내용은 어떤 셸(shell)을 쓰는지 등에 딸라 달라질 수 있습니다. 어쨌든
 메시지 내용에 맞게 대응하면 됩니다.
 </p>
 </blockquote>
@@ -305,6 +306,6 @@ iTerm 2 의 정보를 찾아봅시다.
 </p>
 </div>
 </div>
-<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
