--- a/macos.html
+++ b/macos.html
@@ -33,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">macOS</h1>
@@ -44,7 +45,7 @@ gtag('config', 'UA-44534026-1');
 <li><a href="#org08040d2">팁 메모</a>
 <ul>
 <li><a href="#org882198a">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgc508728">쉘에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org0ec6b86">셸에서 iCloud Drive 접근하기</a></li>
 <li><a href="#org477ea14">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </li>
@@ -84,9 +85,9 @@ gtag('config', 'UA-44534026-1');
 </p>
 </div>
 </div>
-<div id="outline-container-orgc508728" class="outline-3">
-<h3 id="orgc508728">쉘에서 iCloud Drive 접근하기</h3>
-<div class="outline-text-3" id="text-orgc508728">
+<div id="outline-container-org0ec6b86" class="outline-3">
+<h3 id="org0ec6b86">셸에서 iCloud Drive 접근하기</h3>
+<div class="outline-text-3" id="text-org0ec6b86">
 <p>
 아래 디렉토리가 iCloud Drive의 위치입니다.
 </p>
@@ -138,6 +139,6 @@ killall Finder
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
