--- a/emacs-links.html
+++ b/emacs-links.html
@@ -33,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">이맥스(Emacs) 관련 링크 모음</h1>
@@ -43,6 +44,6 @@ Application Framework</a>: PyQT 애플리케이션 임베딩 프로젝트.</li>
 <li><a target="_blank" href="https://github.com/caiorss/org-wiki">Org-wiki</a>: Org 를 이용한 개인용 혹은 데스크탑 위키 구축 확장.</li>
 <li><a target="_blank" href="http://ergoemacs.org/emacs/elisp.html">Practical Emacs Lisp</a>: Emacs Lisp 공부하기에 좋은 자료.</li>
 </ul>
-<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
