--- a/find.html
+++ b/find.html
@@ -33,6 +33,7 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">find</h1>
@@ -134,13 +135,13 @@ gtag('config', 'UA-44534026-1');
 
 <p>
 <code>-exec</code> 커맨드는 세미콜론 <code>;</code> 을 명시한 부분까지 인식합니다. 그런데 위 커맨드는
-<code>\;</code> 로 세미콜론 앞에 백슬래시를 표시하고 있습니다. 이는 쉘이 세미콜론을 특수한
+<code>\;</code> 로 세미콜론 앞에 백슬래시를 표시하고 있습니다. 이는 셸이 세미콜론을 특수한
 구분자로 사용하기 때문에 이를 find 명령의 매개변수로 넘겨주기 위해서는
 세미콜콜을 raw text 로 넘겨줘야 하기 때문입니다. 잘 이해가 안 되시면 그냥
 <code>-exec</code> 옵션의 끝 부분에는 반드시 <code>\;</code> 가 들어가야 한다고 보면 됩니다.
 </p>
 </div>
 </div>
-<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
