--- a/index.html
+++ b/index.html
@@ -33,126 +33,270 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
+<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Frontpage</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header><p>
-어서오세요. Seorenn 의 특수한 페이지 저장소입니다. 이 곳은 그냥 제가 원할
-때 마다 조금씩 글을 작성하여 즉석에서 업데이트 하는 용도로 만들어졌습니다.
-따라서 미완성 글들이 넘쳐나며 동시에 업데이트도 자주 발생하는 그런 글들만 모여 있습니다.
-</p>
-
+<h2><a href="/">Seorenn Static Pages</a></h2></header>
+<div id="outline-container-org1657ac4" class="outline-2">
+<h2 id="org1657ac4">Emacs and Lisp</h2>
+<div class="outline-text-2" id="text-org1657ac4">
 <p>
-주로 IT나 프로그래밍, 개발과 관련된 정보 위주로 구성되어 있습니다만 간혹 이상한
-도구에 관한 메모를 쓸 때도 있습니다. 사실상 개인 메모장 대용입니다. 😃
-</p>
+<article class="summary">
+<h3 class="index-title"><a href="doom-emacs.html">Doom Emacs</a></h3>
+<p>커뮤니티 주도 설정팩인 Doom Emacs(둠 이맥스)의 간략한 설명 및 관련글들을 정리합니다.</p>
+</article>
 
-<p>
-모든 글은 <a href="emacs.html">Emacs</a> 상에서 <a href="org-mode.html">Org Mode</a>로 글을 작성해서 <a href="org-publish.html">Org Publish</a>를 이용해 퍼블리시 합니다.
-</p>
+<article class="summary">
+<h3 class="index-title"><a href="org-spreadsheet.html">Org 스프레드시트</a></h3>
+<p>Org Mode 문서로 스프레드시트(Spreadsheet)를 만드는 방법에 대한 가이드입니다.</p>
+</article>
 
-<div id="outline-container-orga8c2530" class="outline-2">
-<h2 id="orga8c2530">탐색 시작하기 좋은 페이지</h2>
-<div class="outline-text-2" id="text-orga8c2530">
-<p>
-몇 가지 분류로 정리한 가이드 페이지들입니다.
-</p>
-</div>
-<div id="outline-container-org6db385d" class="outline-3">
-<h3 id="org6db385d">프로필(Profile)</h3>
-<div class="outline-text-3" id="text-org6db385d">
-<ul class="org-ul">
-<li><a href="./profile.html">Profile</a>: 사적인 정보(?)는 없는 프로필입니다.</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-orge48369d" class="outline-3">
-<h3 id="orge48369d">에디터(Editors)</h3>
-<div class="outline-text-3" id="text-orge48369d">
-<ul class="org-ul">
-<li><a href="emacs.html">Emacs</a>: 이맥스와 관련된 글들을 모아 놨습니다.</li>
-<li><a href="doom-emacs.html">Doom Emacs</a>: 이맥스와 관련된 글들 중 둠 이맥스와 관련된 것들만 따로 모아 봤습니다.</li>
-<li><a href="spacemacs.html">Spacemacs</a>: 스페이스맥스를 간략히 정리하는 글입니다.</li>
-<li><a href="vim.html">Vim</a>: 빔 이데터에 관한 메모를 모으는 페이지입니다.</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-orga74a526" class="outline-3">
-<h3 id="orga74a526">프로그래밍 언어(Programming Language)</h3>
-<div class="outline-text-3" id="text-orga74a526">
-<ul class="org-ul">
-<li><a href="swift.html">Swift</a>: 가장 좋아하는 프로그래밍 언어인 스위프트와 관련된 글들을 모은 페이지입니다.</li>
-<li><a href="python.html">Python</a>: 두 번째로 좋아하는 프로그래밍 언어인 파이썬과 관련된 글들을 모은 페이지입니다.</li>
-<li><a href="lisp.html">Lisp</a>: 싫어하지만(?) 억지로 써야 하는 리습과 관련된 글들을 모아둔 페이지입니다.</li>
-<li><a href="javascript.html">Javascript</a>: 자바스크립트와 관련된 글들을 쓸 예정입니다.</li>
-<li><a href="css.html">CSS(Cascading Style Sheets)</a>: CSS에 관한 몇몇 정보를 모으는 페이지입니다.</li>
-<li><a href="sh.html">Bourne Shell(sh)</a>: 쉘 스크립팅에 관한 내용이 주인 sh 페이지입니다.</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org19588e6" class="outline-3">
-<h3 id="org19588e6">개발용 도구들</h3>
-<div class="outline-text-3" id="text-org19588e6">
-<ul class="org-ul">
-<li><a href="git.html">Git</a>: 깃과 관련된 정보를 모아둔 페이지입니다.</li>
-<li><a href="docker.html">Docker</a>: 도커와 관련된 정보를 모아둔 페이지입니다.</li>
-<li><a href="kubectl.html">kubectl</a>: 쿠버네티스 CLI 도구인 kubectl 사용법을 모아둔 페이지입니다.</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org5627f1f" class="outline-3">
-<h3 id="org5627f1f">기타 도구들</h3>
-<div class="outline-text-3" id="text-org5627f1f">
-<ul class="org-ul">
-<li><a href="tmux.html">Tmux</a>: Tmux 사용법을 정리하는 페이지입니다.</li>
-<li><a href="homebrew.html">Homebrew</a>: 맥 용 패키지 관리자 흠브루에 관한 내용을 정리하는 페이지입니다.</li>
-<li><a href="iconv.html">iconv</a>: 인코딩 변환 도구인 iconv의 사용법을 간략히 정리합니다.</li>
-<li><a href="find.html">find</a>: 파일 검색 도구인 find 유틸리티의 사용법을 정리하는 페이지입니다.</li>
-<li><a href="caffeinate.html">caffeinate</a>: 맥 공식 잠자기 방해 도구인 카페이네이트 사용법을 간략히 정리하는 페이지입니다.</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-orgb728120" class="outline-3">
-<h3 id="orgb728120">분류하기 애매한 것들</h3>
-<div class="outline-text-3" id="text-orgb728120">
-<ul class="org-ul">
-<li><a href="mongodb.html">MongoDB</a>: 몽고DB와 관련된 내용을 정리하는 페이지입니다.</li>
-<li><a href="github-actions.html">Github Actions</a>: 깃헙 액션에 관한 내용을 정리하는 페이지입니다.</li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org6ccbd1a" class="outline-3">
-<h3 id="org6ccbd1a">링크 모음</h3>
-<div class="outline-text-3" id="text-org6ccbd1a">
-<ul class="org-ul">
-<li><a href="apple-dev-links.html">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</a></li>
-<li><a href="python-links.html">파이썬(Python) 관련 링크 모음</a></li>
-<li><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></li>
-<li><a href="server-stack-links.html">서버 스택 관련 링크 모음</a></li>
-<li><a href="etc-dev-links.html">기타 개발 관련 링크 모음</a></li>
-<li><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></li>
-<li><a href="service_links.html">눈에 띄는 서비스 링크 모음</a></li>
-<li><a href="etc-resource-links.html">기타 리소스 링크 모음</a></li>
-<li><a href="non-dev-links.html">비개발 관련 정보 링크 모음</a></li>
-</ul>
-</div>
-</div>
-<div id="outline-container-org59ac041" class="outline-3">
-<h3 id="org59ac041">기타</h3>
-<div class="outline-text-3" id="text-org59ac041">
-<ul class="org-ul">
-<li><a href="english.html">영어 노트</a>: 개인용 노트입니다.</li>
-<li><a href="italian.html">이탈리아어 노트</a>: 이것도 개인용 노트입니다.</li>
-<li><a href="korean.html">한국어 문법 노트</a>: 이것 또한 개인용 노트입니다.</li>
-<li><a href="minecraft.html">마인크래프트</a>: 그냥 정말 개인용 마인크래프트 메모장 수준의 페이지입니다.</li>
-</ul>
+<article class="summary">
+<h3 class="index-title"><a href="org-publish.html">Org Publish</a></h3>
+<p>Org 문서들을 배치로 퍼블리시할 수 있게 해 주는 Org Publish의 설정방법과 사용법을 설명합니다.</p>
+</article>
 
-<p>
-사이트의 모든 글 링크는 <a href="sitemap.html">사이트맵</a>에서 볼 수 있습니다. 다만 일부 링크가 걸리지 않은 페이지는 '폐기처분(?) 되었지만 404를 피하기 위해 그냥 남겨둔 것'일 수도 있으니 주의(?) 부탁드립니다.
+<article class="summary">
+<h3 class="index-title"><a href="org-mode.html">Org Mode</a></h3>
+<p>Org Mode 에 대한 소개와 문법, 관련된 글들을 정리합니다.</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="emacs-lisp-functions.html">Emacs Lisp Functions</a></h3>
+<p>Emacs Lisp 의 여러 유용한 함수를 정리하는 글</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="lisp.html">Lisp</a></h3>
+<p>Lisp(리습)에 관한 간략한 설명 및 관련 글 모음</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="emacs.html">Emacs</a></h3>
+<p>Emacs(이맥스)에 관한 대략적인 설명과 관련된 글들, 그리고 몇 가지 트러블슈팅 메모를 정리합니다.</p>
+</article>
+
 </p>
 </div>
 </div>
+<div id="outline-container-org9ac89bf" class="outline-2">
+<h2 id="org9ac89bf">Swift</h2>
+<div class="outline-text-2" id="text-org9ac89bf">
+<p>
+<article class="summary">
+<h3 class="index-title"><a href="swiftui.html">SwiftUI</a></h3>
+<p>SwiftUI와 관련된 글 모음</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="swift-method-dispatch.html">Swift Method Dispatch</a></h3>
+<p>Swift 메소드 디스패치를 간단히 공부해보고 메소드 호출이 어떤 식으로 발생하는지를 정리하는 글입니다.</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="swiftui-combine.html">SwiftUI + Combine</a></h3>
+<p>SwiftUI에서 Combine Framework를 어떻게 사용하고 있는지 간단히 정리한 글입니다.</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="combine-framework.html">Combine Framework</a></h3>
+<p>Xcode 11.3에서 추가된 비동기 이벤트 처리 프레임워크 Combine Framework(컴바인 프레임워크)에 대한 간략한 가이드입니다.</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="swift.html">Swift</a></h3>
+<p>Swift(스위프트) 언어에 대한 간략한 소개 및 관련된 내용들</p>
+</article>
+
+</p>
 </div>
-<div id="footer"><div id="time">2020년 01월 05일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div>
+<div id="outline-container-org6e83573" class="outline-2">
+<h2 id="org6e83573">Python</h2>
+<div class="outline-text-2" id="text-org6e83573">
+<p>
+<article class="summary">
+<h3 class="index-title"><a href="python-3-f-string.html">Python 3 F-string</a></h3>
+<p>Python 3.6에서 도입된 f-string에 대한 소개 및 사용법 정리하는 글입니다.</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="python-3-static-typing.html">Python 3 Static Typing</a></h3>
+<p>Python(파이썬) 3 에서 도입된 정적 타이핑 지원 기능을 분석해보는 글입니다.</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="poetry.html">Poetry</a></h3>
+<p>poetry라는 새로운 파이썬 의존성 및 패키지 관리자의 사용법을 정리하는 글입니다.</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="pyenv.html">pyenv</a></h3>
+<p>파이썬 버전 및 virtualenv 환경을 별도로 관리할 수 있게 해주는 pyenv의 소개 및 사용법을 정리하는 글입니다.</p>
+</article>
+
+</p>
+</div>
+</div>
+<div id="outline-container-org1a2c03f" class="outline-2">
+<h2 id="org1a2c03f">Other Programming Language</h2>
+<div class="outline-text-2" id="text-org1a2c03f">
+<p>
+<article class="summary">
+<h3 class="index-title"><a href="sh.html">Bourne Shell(sh)</a></h3>
+<p>본 셸, sh, 가장 기본적인 셸(Shell)에 대한 팁을 정리해 보는 글입니다.</p>
+</article>
+
+</p>
+</div>
+</div>
+<div id="outline-container-orgfe86ff3" class="outline-2">
+<h2 id="orgfe86ff3">Docker and Kubernetes</h2>
+<div class="outline-text-2" id="text-orgfe86ff3">
+<p>
+<article class="summary">
+<h3 class="index-title"><a href="kubectl.html">kubectl</a></h3>
+<p>kubectl 사용법 정리</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="docker-compose.html">Docker Compose</a></h3>
+<p>도커 명령을 스펙 파일로 자동화할 수 있는 도구인 Docker Compose(도커 컴포즈)에 대한 간단한 소개 및 예제를 정리합니다.</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="dockerfile.html">Dockerfile</a></h3>
+<p>Dockerfile(도커 설정파일) 예제 몇 가지를 정리하는 글입니다.</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="docker.html">Docker</a></h3>
+<p>컨테이너 기반 가상화 플랫폼인 도커(Docker)의 간단한 소개 및 몇 가지 팁과 함께 관련 글들을 정리합니다.</p>
+</article>
+
+</p>
+</div>
+</div>
+<div id="outline-container-orgb459386" class="outline-2">
+<h2 id="orgb459386">CLI Tools</h2>
+<div class="outline-text-2" id="text-orgb459386">
+<p>
+<article class="summary">
+<h3 class="index-title"><a href="caffeinate.html">caffeinate</a></h3>
+<p>맥 전용 잠자기 방지 도구인 caffeinate 소개 및 사용법을 정리합니다.</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="git.html">Git</a></h3>
+<p>Git 소개 및 간단한 사용법 정리</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="tmux.html">Tmux</a></h3>
+<p>터미널 멀티플렉서인 Tmux 소개 및 사용법, 단축키 등을 정리합니다</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="homebrew.html">Homebrew</a></h3>
+<p>Homebrew의 소개 및 간단한 사용법을 정리합니다</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="find.html">find</a></h3>
+<p>find CLI 도구 소개 및 사용법</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="iconv.html">iconv</a></h3>
+<p>iconv 소개 및 간단한 사용법</p>
+</article>
+
+</p>
+</div>
+</div>
+<div id="outline-container-org59b3d62" class="outline-2">
+<h2 id="org59b3d62">Etc</h2>
+<div class="outline-text-2" id="text-org59b3d62">
+<p>
+<article class="summary">
+<h3 class="index-title"><a href="mongodb.html">MongoDB</a></h3>
+<p>몽고디비(MongoDB)의 간단한 소개와 사용법 정리</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="profile.html">Profile</a></h3>
+<p>Seorenn 개인 프로필</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="oldindex.html">Old Frontpage</a></h3>
+<p>예전에 쓰던 대문 페이지를 백업한 글입니다.</p>
+</article>
+
+</p>
+</div>
+</div>
+<div id="outline-container-org35c591d" class="outline-2">
+<h2 id="org35c591d">Links</h2>
+<div class="outline-text-2" id="text-org35c591d">
+<p>
+<article class="summary">
+<h3 class="index-title"><a href="apple-dev-links.html">macOS, iOS 등 애플 플랫폼 개발 관련 링크 모음</a></h3>
+<p>macOS, iOS, tvOS, iPadOS 등등 애플 플랫폼 개발 및 리소스 링크 모음</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="python-links.html">파이썬(Python) 관련 링크 모음</a></h3>
+<p>Python(파이썬)과 관련된 각종 리소스나 가이드 페이지 링크 모음집</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="web-dev-links.html">웹 개발 관련 링크 모음</a></h3>
+<p>웹 개발 관련 링크 모음</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="server-stack-links.html">서버 스택 관련 링크 모음</a></h3>
+<p>서버 스택 관련 링크 모음</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="etc-dev-links.html">기타 개발 관련 링크 모음</a></h3>
+<p>기타 개발 관련 링크 모음</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="emacs-links.html">이맥스(Emacs) 관련 링크 모음</a></h3>
+<p>이맥스(Emacs) 관련 링크 모음</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="service_links.html">눈에 띄는 서비스 링크 모음</a></h3>
+<p>눈에 띄는 서비스 링크 모음</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="etc-resource-links.html">기타 리소스 링크 모음</a></h3>
+<p>여러 가지 리소스 링크 모음</p>
+</article>
+
+<article class="summary">
+<h3 class="index-title"><a href="non-dev-links.html">비개발 관련 정보 링크 모음</a></h3>
+<p>개발이나 IT와 직접적으로 관련이 없는 정보 링크 모음집</p>
+</article>
+
+</p>
+</div>
+</div>
+<div id="outline-container-orgecfbd08" class="outline-2">
+<h2 id="orgecfbd08">Sitemap</h2>
+<div class="outline-text-2" id="text-orgecfbd08">
+<p>
+이 사이트의 모든 글들은 <a href="sitemap.html">Sitemap</a> 에서 확인할 수 있습니다.
+</p>
+</div>
+</div>
+<div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
