Update index style

--- a/index.html
+++ b/index.html
@@ -37,7 +37,23 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">Frontpage</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><nav id="table-of-contents">
+<h2>Table of Contents</h2>
+<div id="text-table-of-contents">
+<ul>
+<li><a href="#org1657ac4">Emacs and Lisp</a></li>
+<li><a href="#org9ac89bf">Swift</a></li>
+<li><a href="#org6e83573">Python</a></li>
+<li><a href="#org1a2c03f">Other Programming Language</a></li>
+<li><a href="#orgfe86ff3">Docker and Kubernetes</a></li>
+<li><a href="#orgb459386">CLI Tools</a></li>
+<li><a href="#org59b3d62">Etc</a></li>
+<li><a href="#org35c591d">Links</a></li>
+<li><a href="#orgecfbd08">Sitemap</a></li>
+</ul>
+</div>
+</nav>
+
 <div id="outline-container-org1657ac4" class="outline-2">
 <h2 id="org1657ac4">Emacs and Lisp</h2>
 <div class="outline-text-2" id="text-org1657ac4">
