--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@ gtag('config', 'UA-44534026-1');
 </script>
 </head>
 <body>
-<script data-ad-client="ca-pub-1071465863344332" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <div id="content">
 <header>
 <h1 class="title">Frontpage</h1>
@@ -53,6 +52,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </nav>
+<p>
+이 곳의 글들은 업데이트가 후순위로 밀립니다. 글이 많아지니 퍼블리시 단계가 굉장히 압박이 심해지는 데다가 아카이브 관리 자동화가 되지 않아서 중구난방이 되어가고 있네요. 가급적 중요한 글들은 <a target="_blank" href="https://seorenn.tistory.com">https://seorenn.tistory.com</a> 으로 옮길 예정이니 참고 부탁드립니다.
+</p>
 
 <div id="outline-container-org1657ac4" class="outline-2">
 <h2 id="org1657ac4">Emacs and Lisp</h2>
