--- a/caffeinate.html
+++ b/caffeinate.html
@@ -36,7 +36,10 @@ gtag('config', 'UA-44534026-1');
 <div id="content">
 <header>
 <h1 class="title">caffeinate</h1>
-<h2><a href="/">Seorenn Static Pages</a></h2></header>
+<h2><a href="/">Seorenn Static Pages</a></h2></header><p>
+이 글은 <a target="_blank" href="https://seorenn.tistory.com/61">https://seorenn.tistory.com/61</a> 에서 최신 버전으로 보실 수 있습니다.
+</p>
+
 <div id="outline-container-org6e5b8e9" class="outline-2">
 <h2 id="org6e5b8e9">소개</h2>
 <div class="outline-text-2" id="text-org6e5b8e9">
@@ -92,6 +95,6 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 </div>
-<div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 07일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
