--- a/poetry.html
+++ b/poetry.html
@@ -50,6 +50,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </nav>
+<p>
+이 글의 최신 버전은 <a target="_blank" href="https://seorenn.tistory.com/62">https://seorenn.tistory.com/62</a> 에서 보실 수 있습니다.
+</p>
 
 <div id="outline-container-org7943129" class="outline-2">
 <h2 id="org7943129">Poetry</h2>
@@ -381,6 +384,6 @@ Docker 컨테이너는 독립된 환경이므로 딱히 virtualenv 환경을 사
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 07일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
