Update minor patches

--- a/docker.html
+++ b/docker.html
@@ -171,6 +171,7 @@ gtag('config', 'UA-44534026-1');
 <li><code>--rm</code> 컨테이너가 종료되면 자동으로 삭제되게 합니다.</li>
 <li><code>-p HOST:CONTAINER</code> 호스트 포트와 컨테이너 내부 포트를 연결합니다.</li>
 <li><code>-v HOST_CONTAINER</code> 호스트 파일 시스템과 컨테이너 내부 파일 시스템을 연결합니다.</li>
+<li><code>-e NAME=VALUE</code> 환경변수를 전달합니다.</li>
 <li><code>--name NAME</code> 컨테이너 이름을 지정합니다.</li>
 <li><code>--net NETWORK</code> 특정 네트워크를 사용해서 실행합니다.</li>
 </ul>
@@ -409,6 +410,6 @@ docker volume <span style="color: #ECBE7B;">rm</span> $<span style="color: #51af
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 09일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
