Update several pages

--- a/apple-dev-links.html
+++ b/apple-dev-links.html
@@ -116,6 +116,14 @@ Apps</a>: 앱 쪽에서 애플 인증을 어떻게 구현하는지에 관한 글
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="outline-container-orgd5c278d" class="outline-2">
+<h2 id="orgd5c278d">기타</h2>
+<div class="outline-text-2" id="text-orgd5c278d">
+<ul class="org-ul">
+<li><a target="_blank" href="https://github.com/mixedinkey-opensource/MIKMIDI">https://github.com/mixedinkey-opensource/MIKMIDI</a>: 미디(MIDI) 라이브러리</li>
+</ul>
+</div>
+</div>
+<div id="footer"><div id="time">2020년 01월 15일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
