--- a/combine-framework.html
+++ b/combine-framework.html
@@ -49,6 +49,9 @@ gtag('config', 'UA-44534026-1');
 </ul>
 </div>
 </nav>
+<p>
+이 글의 최신 버전은 <a target="_blank" href="https://seorenn.tistory.com/66">https://seorenn.tistory.com/66</a> 에서 보실 수 있습니다.
+</p>
 
 <div id="outline-container-orgeffa814" class="outline-2">
 <h2 id="orgeffa814">이게 뭘까?</h2>
@@ -223,6 +226,6 @@ p.<span style="color: #c678dd;">send</span>(<span style="color: #da8548; font-we
 </ul>
 </div>
 </div>
-<div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+<div id="footer"><div id="time">2020년 01월 15일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
