--- a/doom-emacs-shortcuts.html
+++ b/doom-emacs-shortcuts.html
@@ -273,6 +273,9 @@ gtag('config', 'UA-44534026-1');
 <li><code>g c</code> 선택영역을 주석(commenting)으로 처리하거나 혹은 해제(uncommenting) (evil-nerd-commenter)</li>
 <li><code>SPC c d</code> 레퍼런스로 이동(Look up reference)</li>
 <li><code>=</code> 선택영역 들여쓰기(indentation) 정리</li>
+<li><code>]e</code> Next Error</li>
+<li><code>[e</code> Previous Error</li>
+<li><code>SPC c x</code> List Errors</li>
 </ul>
 </div>
 </div>
@@ -321,6 +324,6 @@ gtag('config', 'UA-44534026-1');
 
 
 </div>
-</div><div id="footer"><div id="time">2020년 01월 06일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
+</div><div id="footer"><div id="time">2020년 01월 15일 마지막으로 수정됨</div><div id="copyright">Copyright 2019 Heeseung Seo (Seorenn)</div></div></div>
 </body>
 </html>
