Update verification code

--- a/note/sh.html
+++ b/note/sh.html
@@ -24,7 +24,7 @@
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-</head>
+<meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" /><meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" /></head>
 <body>
 <header class="top-header">
 <div class="logo-container">
@@ -45,27 +45,27 @@
 <div id="table-of-contents">
 <h2><img src="/static/icon-toc.svg" />목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org3235f35">소개</a></li>
-<li><a href="#orga8409ea">스크립팅 노트</a>
+<li><a href="#org1d3195e">소개</a></li>
+<li><a href="#orgc47f5d0">스크립팅 노트</a>
 <ul>
-<li><a href="#orgcf0aa5f">실행 가능한 스크립트</a></li>
-<li><a href="#org82fe7cd">if</a></li>
-<li><a href="#orga1fbdec">루프</a></li>
-<li><a href="#org8126d48">조건식 오퍼레이터</a></li>
-<li><a href="#orge0c082b">디렉토리 존재 유무 체크</a></li>
-<li><a href="#orgfce2c89">파일 개수</a></li>
-<li><a href="#orgb53a01a">와일드카드 인자 처리</a></li>
-<li><a href="#org2f7ad11">에러가 나면 멈추게 하기</a></li>
-<li><a href="#org874d743">에러 메시지 숨기기</a></li>
+<li><a href="#orgdcc9016">실행 가능한 스크립트</a></li>
+<li><a href="#org4f582dc">if</a></li>
+<li><a href="#org68a2e51">루프</a></li>
+<li><a href="#orgb5b4253">조건식 오퍼레이터</a></li>
+<li><a href="#org6b56e3f">디렉토리 존재 유무 체크</a></li>
+<li><a href="#orgca30bbd">파일 개수</a></li>
+<li><a href="#orgfb64e1f">와일드카드 인자 처리</a></li>
+<li><a href="#org3a66c51">에러가 나면 멈추게 하기</a></li>
+<li><a href="#org1c0562b">에러 메시지 숨기기</a></li>
 </ul>
 </li>
 </ul>
 </div>
 </div>
 
-<div id="outline-container-org3235f35" class="outline-2">
-<h2 id="org3235f35">소개</h2>
-<div class="outline-text-2" id="text-org3235f35">
+<div id="outline-container-org1d3195e" class="outline-2">
+<h2 id="org1d3195e">소개</h2>
+<div class="outline-text-2" id="text-org1d3195e">
 <p>
 <code>sh</code> 는 Bourne Shell의 축약된 이름으로
 유닉스에서 가장 기본적으로 쓰이던 <a href="shell.html">셸</a> 이다.
@@ -74,16 +74,16 @@
 </p>
 </div>
 </div>
-<div id="outline-container-orga8409ea" class="outline-2">
-<h2 id="orga8409ea">스크립팅 노트</h2>
-<div class="outline-text-2" id="text-orga8409ea">
+<div id="outline-container-orgc47f5d0" class="outline-2">
+<h2 id="orgc47f5d0">스크립팅 노트</h2>
+<div class="outline-text-2" id="text-orgc47f5d0">
 <p>
 전반적인 기준 없이 그냥 메모 단위로 기록되는 팁이다.
 </p>
 </div>
-<div id="outline-container-orgcf0aa5f" class="outline-3">
-<h3 id="orgcf0aa5f">실행 가능한 스크립트</h3>
-<div class="outline-text-3" id="text-orgcf0aa5f">
+<div id="outline-container-orgdcc9016" class="outline-3">
+<h3 id="orgdcc9016">실행 가능한 스크립트</h3>
+<div class="outline-text-3" id="text-orgdcc9016">
 <p>
 일반적으로 셸 스크립트를 만들면 셸을 통해서 실행하는 것이 보통이다.
 </p>
@@ -144,9 +144,9 @@
 </p>
 </div>
 </div>
-<div id="outline-container-org82fe7cd" class="outline-3">
-<h3 id="org82fe7cd">if</h3>
-<div class="outline-text-3" id="text-org82fe7cd">
+<div id="outline-container-org4f582dc" class="outline-3">
+<h3 id="org4f582dc">if</h3>
+<div class="outline-text-3" id="text-org4f582dc">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #51afef;">if</span> <span style="color: #51afef;">[</span> condition <span style="color: #51afef;">]</span>
 <span style="color: #51afef;">then</span>
@@ -185,9 +185,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-orga1fbdec" class="outline-3">
-<h3 id="orga1fbdec">루프</h3>
-<div class="outline-text-3" id="text-orga1fbdec">
+<div id="outline-container-org68a2e51" class="outline-3">
+<h3 id="org68a2e51">루프</h3>
+<div class="outline-text-3" id="text-org68a2e51">
 <p>
 <code>for</code> 문을 이용한 현대적인(?) 루프는 아래처럼 쓸 수 있다.
 </p>
@@ -204,9 +204,9 @@ AND 혹은 OR 조건은 아래처럼 할 수도 있다.
 </p>
 </div>
 </div>
-<div id="outline-container-org8126d48" class="outline-3">
-<h3 id="org8126d48">조건식 오퍼레이터</h3>
-<div class="outline-text-3" id="text-org8126d48">
+<div id="outline-container-orgb5b4253" class="outline-3">
+<h3 id="orgb5b4253">조건식 오퍼레이터</h3>
+<div class="outline-text-3" id="text-orgb5b4253">
 <ul class="org-ul">
 <li><code>=</code>, <code>!=</code> 문자열이 동일한지, 동일하지 않은지</li>
 <li><code>-eq</code>, <code>-ne</code>, <code>-gt</code>, <code>-ge</code>, <code>-lt</code>, <code>-le</code> 차례대로 equal, not equal, greater
@@ -221,9 +221,9 @@ than, greater than or equal, less than, less than or equal</li>
 </ul>
 </div>
 </div>
-<div id="outline-container-orge0c082b" class="outline-3">
-<h3 id="orge0c082b">디렉토리 존재 유무 체크</h3>
-<div class="outline-text-3" id="text-orge0c082b">
+<div id="outline-container-org6b56e3f" class="outline-3">
+<h3 id="org6b56e3f">디렉토리 존재 유무 체크</h3>
+<div class="outline-text-3" id="text-org6b56e3f">
 <p>
 위에서도 정리했지만 <code>-d</code> 플래그를 쓸 수 있다.
 </p>
@@ -238,9 +238,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orgfce2c89" class="outline-3">
-<h3 id="orgfce2c89">파일 개수</h3>
-<div class="outline-text-3" id="text-orgfce2c89">
+<div id="outline-container-orgca30bbd" class="outline-3">
+<h3 id="orgca30bbd">파일 개수</h3>
+<div class="outline-text-3" id="text-orgca30bbd">
 <div class="org-src-container">
 <pre class="src src-sh"><span style="color: #dcaeea;">COUNT</span>=$<span style="color: #51afef;">(</span><span style="color: #ECBE7B;">ls</span> /foo/bar | wc -l<span style="color: #51afef;">)</span>
 </pre>
@@ -264,9 +264,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-orgb53a01a" class="outline-3">
-<h3 id="orgb53a01a">와일드카드 인자 처리</h3>
-<div class="outline-text-3" id="text-orgb53a01a">
+<div id="outline-container-orgfb64e1f" class="outline-3">
+<h3 id="orgfb64e1f">와일드카드 인자 처리</h3>
+<div class="outline-text-3" id="text-orgfb64e1f">
 <p>
 셸 스크립트에 <code>*.ext</code> 같은 파일 이름 와일드카드를 넘겼을 때
 이를 나열하는 방법을 for 커맨드로 표현하면 이렇다.
@@ -284,9 +284,9 @@ than, greater than or equal, less than, less than or equal</li>
 </p>
 </div>
 </div>
-<div id="outline-container-org2f7ad11" class="outline-3">
-<h3 id="org2f7ad11">에러가 나면 멈추게 하기</h3>
-<div class="outline-text-3" id="text-org2f7ad11">
+<div id="outline-container-org3a66c51" class="outline-3">
+<h3 id="org3a66c51">에러가 나면 멈추게 하기</h3>
+<div class="outline-text-3" id="text-org3a66c51">
 <p>
 셸 스크립트 상단에 아래 한 줄을 넣어두면 에러가 났을 때 스크립트가 멈춘다.
 </p>
@@ -296,9 +296,9 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </div>
-<div id="outline-container-org874d743" class="outline-3">
-<h3 id="org874d743">에러 메시지 숨기기</h3>
-<div class="outline-text-3" id="text-org874d743">
+<div id="outline-container-org1c0562b" class="outline-3">
+<h3 id="org1c0562b">에러 메시지 숨기기</h3>
+<div class="outline-text-3" id="text-org1c0562b">
 <p>
 에러 메시지는 <code>stderr</code> (2) 파이프로 전달되니 이것을 지옥의 쓰레기통(?)에 던지면 된다.
 </p>
@@ -310,6 +310,16 @@ than, greater than or equal, less than, less than or equal</li>
 </div>
 </div>
 </section>
+<hr /><div class="backlinks-container">
+<h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/shell.html">셸</a></h2>
+<div class="article-link-date">
+2020년 4월 13일 수정</div>
+</div>
+</div>
+</div>
 <hr/>
 <footer>
 Copyright 2019 ~ 2020. Seorenn all rights reserved.
