--- a/note/caffeinate.html
+++ b/note/caffeinate.html
@@ -24,7 +24,7 @@
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-</head>
+<meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" /><meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" /></head>
 <body>
 <header class="top-header">
 <div class="logo-container">
@@ -45,11 +45,11 @@
 <div id="table-of-contents">
 <h2><img src="/static/icon-toc.svg" />목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org1c5bffa">사용법</a>
+<li><a href="#org0eb5708">사용법</a>
 <ul>
-<li><a href="#org57e46b3">무제한 잠자기 방지</a></li>
-<li><a href="#org41e2fd9">지정된 시간 동안 잠자기 방지</a></li>
-<li><a href="#org535dd24">특정 프로세스 구동 동안 잠자기 방지</a></li>
+<li><a href="#orged4396d">무제한 잠자기 방지</a></li>
+<li><a href="#orgace6116">지정된 시간 동안 잠자기 방지</a></li>
+<li><a href="#org4109eb8">특정 프로세스 구동 동안 잠자기 방지</a></li>
 </ul>
 </li>
 </ul>
@@ -60,13 +60,13 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 <a href="macos.html">macOS</a> 전용 <a href="cli.html">CLI</a> 도구다.
 </p>
 
-<div id="outline-container-org1c5bffa" class="outline-2">
-<h2 id="org1c5bffa">사용법</h2>
-<div class="outline-text-2" id="text-org1c5bffa">
+<div id="outline-container-org0eb5708" class="outline-2">
+<h2 id="org0eb5708">사용법</h2>
+<div class="outline-text-2" id="text-org0eb5708">
 </div>
-<div id="outline-container-org57e46b3" class="outline-3">
-<h3 id="org57e46b3">무제한 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org57e46b3">
+<div id="outline-container-orged4396d" class="outline-3">
+<h3 id="orged4396d">무제한 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orged4396d">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate
 </pre>
@@ -77,9 +77,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org41e2fd9" class="outline-3">
-<h3 id="org41e2fd9">지정된 시간 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org41e2fd9">
+<div id="outline-container-orgace6116" class="outline-3">
+<h3 id="orgace6116">지정된 시간 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-orgace6116">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -t <span style="color: #da8548; font-weight: bold;">3600</span>
 </pre>
@@ -90,9 +90,9 @@ caffeinate는 맥이 잠자기 모드에 빠지지 않도록 해주는
 </div>
 </div>
 
-<div id="outline-container-org535dd24" class="outline-3">
-<h3 id="org535dd24">특정 프로세스 구동 동안 잠자기 방지</h3>
-<div class="outline-text-3" id="text-org535dd24">
+<div id="outline-container-org4109eb8" class="outline-3">
+<h3 id="org4109eb8">특정 프로세스 구동 동안 잠자기 방지</h3>
+<div class="outline-text-3" id="text-org4109eb8">
 <div class="org-src-container">
 <pre class="src src-bash">caffeinate -i <span style="color: #ECBE7B;">make</span>
 </pre>
