--- a/note/css.html
+++ b/note/css.html
@@ -24,7 +24,7 @@
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-</head>
+<meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" /><meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" /></head>
 <body>
 <header class="top-header">
 <div class="logo-container">
@@ -45,18 +45,18 @@
 <div id="table-of-contents">
 <h2><img src="/static/icon-toc.svg" />목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org4d7c936">CSS를 HTML문서에 사용하기</a>
+<li><a href="#org37038aa">CSS를 HTML문서에 사용하기</a>
 <ul>
-<li><a href="#org3946cfc">태그에 바로 스타일 입히기</a></li>
-<li><a href="#orgdefec31">스타일 블록</a></li>
-<li><a href="#org3e8319e">스타일 파일 로딩 시키기</a></li>
+<li><a href="#org524153f">태그에 바로 스타일 입히기</a></li>
+<li><a href="#org1afc790">스타일 블록</a></li>
+<li><a href="#orgbbde7a2">스타일 파일 로딩 시키기</a></li>
 </ul>
 </li>
-<li><a href="#org4845d56">단어를 자르지 않기</a></li>
-<li><a href="#org34a71e2">둥근 모서리</a></li>
-<li><a href="#org4ba007f">div 블록 가운데 정렬</a></li>
-<li><a href="#orge87b757">소수점 자리로 정렬</a></li>
-<li><a href="#org06a5f8d">기타 CSS 관련 외부 링크</a></li>
+<li><a href="#orgb971e94">단어를 자르지 않기</a></li>
+<li><a href="#org96f1e34">둥근 모서리</a></li>
+<li><a href="#org307e97d">div 블록 가운데 정렬</a></li>
+<li><a href="#org428417f">소수점 자리로 정렬</a></li>
+<li><a href="#org09f4eaa">기타 CSS 관련 외부 링크</a></li>
 </ul>
 </div>
 </div>
@@ -69,22 +69,22 @@ HTML 문서의 스타일을 구성할 때 사용하는 일종의 언어이다.
 나머지 내용은 CSS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org4d7c936" class="outline-2">
-<h2 id="org4d7c936">CSS를 HTML문서에 사용하기</h2>
-<div class="outline-text-2" id="text-org4d7c936">
+<div id="outline-container-org37038aa" class="outline-2">
+<h2 id="org37038aa">CSS를 HTML문서에 사용하기</h2>
+<div class="outline-text-2" id="text-org37038aa">
 </div>
-<div id="outline-container-org3946cfc" class="outline-3">
-<h3 id="org3946cfc">태그에 바로 스타일 입히기</h3>
-<div class="outline-text-3" id="text-org3946cfc">
+<div id="outline-container-org524153f" class="outline-3">
+<h3 id="org524153f">태그에 바로 스타일 입히기</h3>
+<div class="outline-text-3" id="text-org524153f">
 <div class="org-src-container">
 <pre class="src src-html">&lt;<span style="color: #c678dd;">p</span> <span style="color: #dcaeea;">style</span>=<span style="color: #98be65;">"font-size: 2rem"</span>&gt;...&lt;/<span style="color: #c678dd;">p</span>&gt;
 </pre>
 </div>
 </div>
 </div>
-<div id="outline-container-orgdefec31" class="outline-3">
-<h3 id="orgdefec31">스타일 블록</h3>
-<div class="outline-text-3" id="text-orgdefec31">
+<div id="outline-container-org1afc790" class="outline-3">
+<h3 id="org1afc790">스타일 블록</h3>
+<div class="outline-text-3" id="text-org1afc790">
 <div class="org-src-container">
 <pre class="src src-html">&lt;<span style="color: #c678dd;">style</span>&gt;
 p {
@@ -96,9 +96,9 @@ p {
 </div>
 </div>
 </div>
-<div id="outline-container-org3e8319e" class="outline-3">
-<h3 id="org3e8319e">스타일 파일 로딩 시키기</h3>
-<div class="outline-text-3" id="text-org3e8319e">
+<div id="outline-container-orgbbde7a2" class="outline-3">
+<h3 id="orgbbde7a2">스타일 파일 로딩 시키기</h3>
+<div class="outline-text-3" id="text-orgbbde7a2">
 <div class="org-src-container">
 <pre class="src src-html">&lt;<span style="color: #c678dd;">link</span> <span style="color: #dcaeea;">res</span>=<span style="color: #98be65;">"stylesheet"</span> <span style="color: #dcaeea;">href</span>=<span style="color: #98be65;">"style.css"</span> /&gt;
 </pre>
@@ -106,9 +106,9 @@ p {
 </div>
 </div>
 </div>
-<div id="outline-container-org4845d56" class="outline-2">
-<h2 id="org4845d56">단어를 자르지 않기</h2>
-<div class="outline-text-2" id="text-org4845d56">
+<div id="outline-container-orgb971e94" class="outline-2">
+<h2 id="orgb971e94">단어를 자르지 않기</h2>
+<div class="outline-text-2" id="text-orgb971e94">
 <p>
 문장이 길어져서 다음 줄로 넘어갈 때
 단어를 중간에 자르면 가독성에 문제가 있을 수 있다.
@@ -120,9 +120,9 @@ p {
 </div>
 </div>
 </div>
-<div id="outline-container-org34a71e2" class="outline-2">
-<h2 id="org34a71e2">둥근 모서리</h2>
-<div class="outline-text-2" id="text-org34a71e2">
+<div id="outline-container-org96f1e34" class="outline-2">
+<h2 id="org96f1e34">둥근 모서리</h2>
+<div class="outline-text-2" id="text-org96f1e34">
 <div class="org-src-container">
 <pre class="src src-css"><span style="color: #98be65;">border-radius</span>: 8px;
 </pre>
@@ -132,9 +132,9 @@ p {
 </p>
 </div>
 </div>
-<div id="outline-container-org4ba007f" class="outline-2">
-<h2 id="org4ba007f">div 블록 가운데 정렬</h2>
-<div class="outline-text-2" id="text-org4ba007f">
+<div id="outline-container-org307e97d" class="outline-2">
+<h2 id="org307e97d">div 블록 가운데 정렬</h2>
+<div class="outline-text-2" id="text-org307e97d">
 <p>
 큰 div 블록 안에 가로 640 픽셀의 작은 div 블록을 가운데로 정렬하려면 아래처럼 할 수 있다.
 </p>
@@ -147,9 +147,9 @@ p {
 </div>
 </div>
 </div>
-<div id="outline-container-orge87b757" class="outline-2">
-<h2 id="orge87b757">소수점 자리로 정렬</h2>
-<div class="outline-text-2" id="text-orge87b757">
+<div id="outline-container-org428417f" class="outline-2">
+<h2 id="org428417f">소수점 자리로 정렬</h2>
+<div class="outline-text-2" id="text-org428417f">
 <p>
 테이블 등에서 실수를 표시할 때 소수점 기준으로 표시하려면
 아래와 같은 스타일을 추가할 수 있다.
@@ -165,9 +165,9 @@ p {
 </p>
 </div>
 </div>
-<div id="outline-container-org06a5f8d" class="outline-2">
-<h2 id="org06a5f8d">기타 CSS 관련 외부 링크</h2>
-<div class="outline-text-2" id="text-org06a5f8d">
+<div id="outline-container-org09f4eaa" class="outline-2">
+<h2 id="org09f4eaa">기타 CSS 관련 외부 링크</h2>
+<div class="outline-text-2" id="text-org09f4eaa">
 <ul class="org-ul">
 <li><a target="_blank" href="https://cssgrid-generator.netlify.com">CSS Grid Generator</a></li>
 </ul>
