--- a/note/macos.html
+++ b/note/macos.html
@@ -24,7 +24,7 @@
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-</head>
+<meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" /><meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" /></head>
 <body>
 <header class="top-header">
 <div class="logo-container">
@@ -45,9 +45,9 @@
 <div id="table-of-contents">
 <h2><img src="/static/icon-toc.svg" />목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org8af068d">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org1409b4d">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#org1b5c3ce">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org678322b">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#orgb5105bf">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#orgfef47b8">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -72,17 +72,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org8af068d" class="outline-2">
-<h2 id="org8af068d">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org8af068d">
+<div id="outline-container-org678322b" class="outline-2">
+<h2 id="org678322b">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org678322b">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org1409b4d" class="outline-2">
-<h2 id="org1409b4d">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org1409b4d">
+<div id="outline-container-orgb5105bf" class="outline-2">
+<h2 id="orgb5105bf">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-orgb5105bf">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -102,9 +102,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-org1b5c3ce" class="outline-2">
-<h2 id="org1b5c3ce">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-org1b5c3ce">
+<div id="outline-container-orgfef47b8" class="outline-2">
+<h2 id="orgfef47b8">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-orgfef47b8">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -124,6 +124,13 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </section>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/sh.html">Bourne Shell</a></h2>
+<div class="article-link-date">
+2020년 4월 13일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/caffeinate.html">caffeinate</a></h2>
