--- a/note/shell.html
+++ b/note/shell.html
@@ -24,7 +24,7 @@
 <meta name="referrer" content="unsafe-url" />
 <meta name="robots" content="follow,index" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
-</head>
+<meta name="google-site-verification" content="YqTFZuthbvGIlDE1dhxiTjZ3m-GfyNs_rsHaOlPKpug" /><meta name="naver-site-verification" content="ebf6a89968fd9f447c1a77d83e2c4aa9bdbb0345" /></head>
 <body>
 <header class="top-header">
 <div class="logo-container">
@@ -68,7 +68,7 @@
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/cli.html">CLI</a></h2>
 <div class="article-link-date">
-2020년 4월 12일 수정</div>
+2020년 4월 13일 수정</div>
 </div>
 </div>
 </div>
