--- a/note/macos.html
+++ b/note/macos.html
@@ -45,9 +45,9 @@
 <div id="table-of-contents">
 <h2><img src="/static/icon-toc.svg" />목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org678322b">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#orgb5105bf">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#orgfef47b8">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#org45edaf4">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#org4578ed7">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#org9c6f5af">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -72,17 +72,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org678322b" class="outline-2">
-<h2 id="org678322b">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org678322b">
+<div id="outline-container-org45edaf4" class="outline-2">
+<h2 id="org45edaf4">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-org45edaf4">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-orgb5105bf" class="outline-2">
-<h2 id="orgb5105bf">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-orgb5105bf">
+<div id="outline-container-org4578ed7" class="outline-2">
+<h2 id="org4578ed7">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-org4578ed7">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -102,9 +102,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgfef47b8" class="outline-2">
-<h2 id="orgfef47b8">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-orgfef47b8">
+<div id="outline-container-org9c6f5af" class="outline-2">
+<h2 id="org9c6f5af">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-org9c6f5af">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
